# ViT-from-scratch

./: README.md  pyproject.toml  train.py  train_comparison.py  training_vit.py
configs/: resnet.yaml  vit.yaml
configs/vit/: resnet.yaml
scripts/vit/: train.py  train_comparison.py
transformer_scratch/: __init__.py  transformer_model.py
transformer_scratch/vit_scratch/: dataset.py  trainer.py
transformer_scratch/vit_scratch/config/: model.py
transformer_scratch/vit_scratch/models/: resnet_baseline.py  vit_model.py
transformers_scratch/vit_scratch/: trainer.py
transformers_scratch/vit_scratch/config/: __init__.py
transformers_scratch/vit_scratch/models/: __init__.py  resnet_baseline.py  vit_model.py  wrapper_model.py
vit_scratch/: dataset.py  trainer.py
vit_scratch/config/: __init__.py  training.py  utils.py
vit_scratch/models/: __init__.py  base_model.py  config.py  resnet_baseline.py  vit_custom.py
